[gd_scene load_steps=43 format=2]

[ext_resource path="res://Assets/Enemy character sprite/Bandits/Bandits/Sprites/Light Bandit/LightBandit.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemy character sprite/Bandits/Bandits/Sprites/Light Bandit/Hurt/LightBandit_Hurt_0.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemy character sprite/Bandits/Bandits/Sprites/Light Bandit/Hurt/LightBandit_Hurt_1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemy character sprite/Bandits/Bandits/Sprites/Light Bandit/Combat Idle/LightBandit_Combat Idle_0.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemy character sprite/Bandits/Bandits/Sprites/Light Bandit/Combat Idle/LightBandit_Combat Idle_1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemy character sprite/Bandits/Bandits/Sprites/Light Bandit/Combat Idle/LightBandit_Combat Idle_2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Enemy character sprite/Bandits/Bandits/Sprites/Light Bandit/Combat Idle/LightBandit_Combat Idle_3.png" type="Texture" id=7]
[ext_resource path="res://banditLight.gd" type="Script" id=8]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 336, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 336, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 336, 96, 48, 48 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ), ExtResource( 3 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "run",
"speed": 15.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "dying",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "combatIdle",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "attack",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 12.0
height = 16.0

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 22, 19.5 )

[sub_resource type="CapsuleShape2D" id=32]
radius = 7.0
height = 18.0

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 351.5, 82 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "idle"

[node name="MainCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1, 4 )
shape = SubResource( 6 )

[node name="EnemyBody" type="Area2D" parent="." groups=["EnemyBody"]]

[node name="EnemyBodyCollision" type="CollisionShape2D" parent="EnemyBody"]
position = Vector2( 1, 4 )
shape = SubResource( 6 )

[node name="MeleeRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3
monitorable = false

[node name="AttackRange" type="CollisionShape2D" parent="MeleeRange"]
visible = false
position = Vector2( 0, 2.5 )
shape = SubResource( 34 )

[node name="AttackHitbox" type="Area2D" parent="." groups=["LBanditSword"]]
collision_layer = 0

[node name="AttackCollision" type="CollisionShape2D" parent="AttackHitbox"]
position = Vector2( -17, -1 )
shape = SubResource( 32 )
disabled = true

[node name="field_of_vision" type="Area2D" parent="." groups=["Detection"]]
visible = false
collision_layer = 0
collision_mask = 3
gravity_vec = Vector2( 0, 0 )

[node name="DetectionCollision" type="CollisionShape2D" parent="field_of_vision"]
position = Vector2( -357.5, 0 )
shape = SubResource( 33 )
one_way_collision_margin = 0.0

[node name="IFrameTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Actiontimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="EnemyBody" to="." method="_on_EnemyBody_area_entered"]
[connection signal="body_entered" from="MeleeRange" to="." method="_on_MeleeRange_body_entered"]
[connection signal="body_entered" from="field_of_vision" to="." method="_on_field_of_vision_body_entered"]
[connection signal="body_exited" from="field_of_vision" to="." method="_on_field_of_vision_body_exited"]
[connection signal="timeout" from="IFrameTimer" to="." method="_on_IFrameTimer_timeout"]
